--- a/css/timer.css
+++ b/css/timer.css
@@ -281,9 +281,19 @@
         font-size: 0.75rem;
     }
 
+    .timer-progress-ring {
+        width: 200px;
+        height: 200px;
+    }
+
     .progress-svg {
         width: 200px;
         height: 200px;
+    }
+
+    .timer-display {
+        font-size: clamp(3rem, 14vw, 5rem);
+        letter-spacing: -2px;
     }
 }
 
